moved piece spacing from main to postit theme to fix a bug

--- a/css/main.css
+++ b/css/main.css
@@ -42,9 +42,6 @@ body {
 
     -webkit-flex-shrink: 1;
     -webkit-flex-grow: 1;
-
-    justify-content: space-around;
-    -webkit-justify-content: space-around;
 }
 
 .main div.gamePiece {
