--- a/css/postit.css
+++ b/css/postit.css
@@ -31,6 +31,9 @@ body.postit {
     -webkit-box-shadow: 10px 10px 5px 0px rgba(105, 105, 105,1);
     -moz-box-shadow: 10px 10px 5px 0px rgba(105, 105, 105,1);
     box-shadow: 10px 10px 5px 0px rgb(105, 105, 105);
+
+    justify-content: space-around;
+    -webkit-justify-content: space-around;
 }
 
 .postit .gameBoard div.gamePiece {
