--- a/css/scooter.css
+++ b/css/scooter.css
@@ -52,6 +52,10 @@ body.scooter{
     -o-transition: all 0.4s ease-out;
 }
 
+.scooter button {
+    font-weight: bold;
+}
+
 .scooter button.reset {
     background: #E52A1D;
     color: #ffffff;
